--- a/style.css
+++ b/style.css
@@ -84,6 +84,41 @@
 
 /* AKHIR GADGET */
 
+/* Case */
+
+#case h1 {
+  color: white;
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 1);
+  margin-top: 50px;
+  background-color: dodgerblue;
+  border-radius: 10px;
+}
+
+#case img {
+  margin-top: 30px;
+  height: 300px;
+  border-radius: 20px;
+  filter: brightness(50%);
+}
+
+#case img:hover {
+  filter: brightness(100%);
+  transition: 0.5s;
+}
+
+#case p {
+  background-color: dodgerblue;
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 1);
+  border-radius: 20px;
+  color: white;
+  font-size: 20px;
+  margin-top: 10px;
+  font-weight: 500;
+  text-transform: capitalize;
+}
+
+/* akhir case */
+
 /* peralatan */
 #peralatan h1 {
   color: white;
